--- a/index.html
+++ b/index.html
@@ -393,7 +393,10 @@
 
                                 
                                     <a href="http://www.minggouwa.cn/" class="waves-effect waves-light btn" target="_blank">
-                        <i class="fab fa-github-alt"></i>另一个网站
+                        <i class="fab fa-github-alt"></i>资源网站
+                    </a>
+				    <a href="http://www.minggouwa.cn/zhuye/zhuye.html" class="waves-effect waves-light btn" target="_blank">
+                        <i class="fab fa-github-alt"></i>个人主页
                     </a>
                                     
                             </div>
